[tool.poetry]
name = "ai-real-estate-assistant"
version = "0.1.0"
description = "AI Real Estate Assistant App"
authors = ["Alexander Nesterovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
openai = "^1.37.1"
streamlit = "^1.37.0"
# ImportError: libcudnn.so.9: cannot open shared object file: No such file or directory
langchain-community = "^0.2.10"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.0.63"
langchain-openai = "^0.1.19"
tabulate = "^0.9.0"
pyzipcode = "^3.0.1"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
faker = "^26.0.0"
duckduckgo-search = "^6.2.6"
langchainhub = "^0.1.20"
langchain-core = "^0.2.28"
langchain-text-splitters = "^0.2.2"
validators = "^0.33.0"
fastembed = "^0.4.2"
docarray = "^0.40.0"
chromadb = "^0.5.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
